* Based on ahwayakchih's blue screen paging code (see bug #1444), I added   paging support to KDL (but not the on-screen debug output for now). * Defaults to "on", use the new "paging" KDL command to turn it off (or on   again). * When pressing 'q' while it is waiting for a key, it will now eat the rest   of the commands output (helpful for slow screen output of a large data set).

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@23566 a95241bf-73f2-0310-859d-f6bbb57e9c96